change default font & remove comments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -5,6 +6,7 @@
   --foreground: #171717;
   --accent: #c1e25e;
   font-size: 16px;
+  font-family: "Inter", sans-serif;
 }
 
 * {
@@ -25,41 +27,6 @@
   }
 }
 
-body {
-  /* background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif; */
-}
-
 @theme {
   --color-accent: #c1e25e;
-
-  /* --color-base-100: oklch(98% 0.002 247.839);
-  --color-base-200: oklch(96% 0.003 264.542);
-  --color-base-300: oklch(92% 0.006 264.531);
-  --color-base-content: oklch(21% 0.034 264.665);
-  --color-primary: oklch(95% 0.038 75.164);
-  --color-primary-content: oklch(28% 0.109 3.907);
-  --color-secondary: oklch(0% 0 0);
-  --color-secondary-content: oklch(100% 0 0);
-  --color-accent: oklch(82% 0.111 230.318);
-  --color-accent-content: oklch(28% 0.109 3.907);
-  --color-neutral: oklch(37% 0.034 259.733);
-  --color-neutral-content: oklch(98% 0.002 247.839);
-  --color-info: oklch(60% 0.126 221.723);
-  --color-info-content: oklch(96% 0.007 247.896);
-  --color-success: oklch(53% 0.157 131.589);
-  --color-success-content: oklch(97% 0.021 166.113);
-  --color-warning: oklch(87% 0.169 91.605);
-  --color-warning-content: oklch(20% 0.042 265.755);
-  --color-error: oklch(55% 0.195 38.402);
-  --color-error-content: oklch(94% 0.003 17);
-  --radius-selector: 2rem;
-  --radius-field: 2rem;
-  --radius-box: 0.25rem;
-  --size-selector: 0.25rem;
-  --size-field: 0.25rem;
-  --border: 1.5px;
-  --depth: 1;
-  --noise: 0; */
 }
